# img_detect_mcp

./: .env  .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: PYTHON_PACKAGE_ENTRY_POINT.md
scripts/: start_server.sh
src/mcp_api_server/: __init__.py  __main__.py  config.py  logging_config.py  main.py  mcp_cli.py  models.py  server.py
src/mcp_api_server/tools/: __init__.py  image_analysis.py
src/mcp_server/: __main__.py  fastmcp_server.py  server.py  settings.py  web_server.py
src/mcp_server/tools/: __init__.py  image_analysis.py
src/mcp_server/utils/: logging_config.py
tests/: conftest.py  test_models.py  test_server.py
